# cpp-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: example.h
src/: example.cpp  main.cpp
tests/: CMakeLists.txt  test_example.cpp
